# candlescyther

./: .gitignore  README.md  Taskfile.yml
backend/: .dockerignore  .sqlfluff  Cargo.toml  Dockerfile  TICKERS.md  database.db  database.db-shm  database.db-wal  fly.toml  openapi.json
backend/.sqlx/: query-09ee7ce7877f8b9649769badba43a872613ff5675ac029443d274257a5cf28f7.json  query-1069c32706fa6d6715411b02160c6d090050d7cf3db1c8770cb3be4cd7bdf106.json  query-18d62f3424b66987ae2801cac7e296fd4423e478a42d477b68aa82d819abd2c1.json  query-21e66a2a3608965f2625d135337ba0868c392de8b58b0e3a0e9788722a2338ec.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2a9b59a55a7f6cf2fd3050dc4890556ae716409b8b7845b2fd631a73edacc9a8.json  query-2c50f0fc9ce710caca0fae7d6f0071c4c55261df3c2d4b3518592ddbd6ce53ea.json  query-3895558f539926e6a3ebe1f661c0ef43ff87a5bb7d5136742bda76940c79f52e.json  query-389c4dba2e5c778fb6bd858a4725ff885671bf3481417cbf0f7df031b0311eeb.json  query-3b5583101635af7b60aaa966ecbbacc89a953f5a3bd15a851c7fd94a5ccd9f01.json  query-51a08bafc740626b3b4ed6951bf3df713bf7a5af953196409ba9557087239ddc.json  query-c53a692a75a31ad2e010f04a8779e62fdfca0d6b479f74675f72bd9953601bbf.json  query-c8b69a2ac42ec7cad41352440ffe251bb2740a146f2956b76122da49bd972401.json  query-e057bab0f4e17e2ed0954cfd5544050a89e8004fb6a6f2896c6c363fb6678692.json  query-f9aa06a8dd330b1d61ddb15ce039736ba23d601409657a8f87038f103f8ad00c.json
backend/db/: database.db  database.db-shm  database.db-wal
backend/migrations/: 20251003143710_create_table_user.sql  (+13 more)
(+122 files in other folders)
