[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
cron = "0.15"
axum = "0.8.4"
chrono = "0.4.42"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
ureq = "3.1.2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1.89"

[dev-dependencies]
axum-test = "18.1.0"

[profile.dev]
debug = false
